-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
compiler/c2/TestGVNCrash.java fails intermittently and the failure is not reproducible:
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S115904/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/6bad2d99-b753-4700-b913-6cd7722c6bbd/runs/c5b1193e-8352-4e5d-9dc4-d0bf7ca73e0c/workspace/open/src/hotspot/share/opto/memnode.cpp:244), pid=2028729, tid=2028769
# assert(phase->C->get_alias_index(t) == phase->C->get_alias_index(t_adr)) failed: correct memory chain
#
# JRE version: Java(TM) SE Runtime Environment (21.0+1) (fastdebug build 21-valhalla+1-LTS-8)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-valhalla+1-LTS-8, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1645038] MemNode::optimize_memory_chain(Node*, TypePtr const*, Node*, PhaseGVN*)+0x3e8
Current CompileTask:
C2: 305 18 b compiler.c2.TestGVNCrash::test (152 bytes)
Stack: [0x00007f7fd9828000,0x00007f7fd9929000], sp=0x00007f7fd9924000, free space=1008k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1645038] MemNode::optimize_memory_chain(Node*, TypePtr const*, Node*, PhaseGVN*)+0x3e8 (memnode.cpp:244)
V [libjvm.so+0x164ac20] LoadNode::Ideal(PhaseGVN*, bool)+0x250 (memnode.cpp:1807)
V [libjvm.so+0x183ca13] PhaseIterGVN::transform_old(Node*)+0xc3 (phaseX.cpp:1261)
V [libjvm.so+0x1834655] PhaseIterGVN::optimize()+0x75 (phaseX.cpp:1203)
V [libjvm.so+0xb50548] Compile::Optimize()+0xcb8 (compile.cpp:2797)
V [libjvm.so+0xb54999] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1959 (compile.cpp:843)
V [libjvm.so+0x94716e] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x51e (c2compiler.cpp:113)
V [libjvm.so+0xb61fdc] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa7c (compileBroker.cpp:2237)
V [libjvm.so+0xb62de8] CompileBroker::compiler_thread_loop()+0x608 (compileBroker.cpp:1916)
V [libjvm.so+0x10d67c6] JavaThread::thread_main_inner()+0x206 (javaThread.cpp:711)
V [libjvm.so+0x1b25ce0] Thread::call_run()+0x100 (thread.cpp:224)
V [libjvm.so+0x1797e33] thread_native_entry(Thread*)+0x103 (os_linux.cpp:739)
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S115904/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/6bad2d99-b753-4700-b913-6cd7722c6bbd/runs/c5b1193e-8352-4e5d-9dc4-d0bf7ca73e0c/workspace/open/src/hotspot/share/opto/memnode.cpp:244), pid=2028729, tid=2028769
# assert(phase->C->get_alias_index(t) == phase->C->get_alias_index(t_adr)) failed: correct memory chain
#
# JRE version: Java(TM) SE Runtime Environment (21.0+1) (fastdebug build 21-valhalla+1-LTS-8)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-valhalla+1-LTS-8, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1645038] MemNode::optimize_memory_chain(Node*, TypePtr const*, Node*, PhaseGVN*)+0x3e8
Current CompileTask:
C2: 305 18 b compiler.c2.TestGVNCrash::test (152 bytes)
Stack: [0x00007f7fd9828000,0x00007f7fd9929000], sp=0x00007f7fd9924000, free space=1008k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1645038] MemNode::optimize_memory_chain(Node*, TypePtr const*, Node*, PhaseGVN*)+0x3e8 (memnode.cpp:244)
V [libjvm.so+0x164ac20] LoadNode::Ideal(PhaseGVN*, bool)+0x250 (memnode.cpp:1807)
V [libjvm.so+0x183ca13] PhaseIterGVN::transform_old(Node*)+0xc3 (phaseX.cpp:1261)
V [libjvm.so+0x1834655] PhaseIterGVN::optimize()+0x75 (phaseX.cpp:1203)
V [libjvm.so+0xb50548] Compile::Optimize()+0xcb8 (compile.cpp:2797)
V [libjvm.so+0xb54999] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1959 (compile.cpp:843)
V [libjvm.so+0x94716e] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x51e (c2compiler.cpp:113)
V [libjvm.so+0xb61fdc] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa7c (compileBroker.cpp:2237)
V [libjvm.so+0xb62de8] CompileBroker::compiler_thread_loop()+0x608 (compileBroker.cpp:1916)
V [libjvm.so+0x10d67c6] JavaThread::thread_main_inner()+0x206 (javaThread.cpp:711)
V [libjvm.so+0x1b25ce0] Thread::call_run()+0x100 (thread.cpp:224)
V [libjvm.so+0x1797e33] thread_native_entry(Thread*)+0x103 (os_linux.cpp:739)
- relates to
-
JDK-8288204 GVN Crash: assert() failed: correct memory chain
-
- Resolved
-